# ICP-Rust

./: README.md  package-lock.json  package.json
src/warsztaty_rust_backend/: Cargo.toml  warsztaty_rust_backend.did
src/warsztaty_rust_backend/src/: lib.rs
src/warsztaty_rust_frontend/public/: 041.webp:Zone.Identifier
src/warsztaty_rust_frontend/src/: App.vue  index.scss  main.js
src/warsztaty_rust_frontend/src/router/: index.js
src/warsztaty_rust_frontend/src/views/: home.vue  login.vue
